--- a/Client/bower.json
+++ b/Client/bower.json
@@ -9,11 +9,12 @@
     "angular-resource": "~1.2.0",
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "foundation": "~4.3.0",
     "underscore": "~1.5.1",
     "modernizr": "~2.6.2",
     "angular-route": "~1.2.0",
-    "angular-ui-router": "~0.2.0"
+    "angular-ui-router": "~0.2.0",
+    "foundation": "~5.0.2",
+    "momentjs": "~2.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
