--- a/Client/bower.json
+++ b/Client/bower.json
@@ -14,7 +14,8 @@
     "angular-route": "~1.2.0",
     "angular-ui-router": "~0.2.0",
     "foundation": "~5.0.2",
-    "momentjs": "~2.4.0"
+    "momentjs": "~2.4.0",
+    "isotope": "2.0.0-beta.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
